更新讓網站好看點

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Segoe UI", sans-serif;
     background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-    background-image: url('/static/images/dark.png');
+    background-image: url('/static/images/dark1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
