--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="https://fido2-web.akitawan.moe/favicon.ico" type="image/x-icon">
-
+    
 </head>
 
-<body onclick="toggleLight()">
+<body onclick="toggleDash()">
 
     <div class="login-card">
         <h2 id="user-title">歡迎回來，使用者</h2>
@@ -20,8 +20,7 @@
     </div>
 
     <script>  const user = {{ payload | tojson | safe }};  </script>
-    <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    <script type="module" src="/static/js/dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
