--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="https://fido2-web.akitawan.moe/favicon.ico" type="image/x-icon">
-    
 </head>
 
 <body onclick="toggleLight()" >
@@ -25,9 +24,9 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script type="module" src="/static/js/login.js"></script>
 </body>
 
 </html>
