修改背景展示方式與不能反白

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,9 @@
     
 </head>
 
-<body onclick="toggleDash()">
+<body onclick="toggleDash()" style="background-image: url('/static/images/dash1.png');">
+    <div class="background-layer" id="bg-layer-1"></div>
+    <div class="background-layer-secondary" id="bg-layer-2"></div>
 
     <div class="login-card">
         <h2 id="user-title">歡迎回來，使用者</h2>
