--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,10 @@
     <link rel="icon" href="https://fido2-web.akitawan.moe/favicon.ico" type="image/x-icon">
 </head>
 
-<body onclick="toggleLight()" >
-    
+<body onclick="toggleLight()" style="background-image: url('/static/images/dark1.png');">
+    <div class="background-layer" id="bg-layer-1"></div>
+    <div class="background-layer-secondary" id="bg-layer-2"></div>
+
     <div class="login-container">
         <div class="login-card">
             <h1>歡迎來到OAuth2.0 Demo</h1>
