--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Segoe UI", sans-serif;
     background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-    background-image: url('/static/images/dark1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -11,7 +10,33 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    -webkit-user-select: none; /* Chrome/Safari */
+    -moz-user-select: none;    /* Firefox */
+    -ms-user-select: none;     /* IE10+ */
+    user-select: none;         /* 標準屬性 */
 }
+
+
+.background-layer, .background-layer-secondary {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: none; /* 取消轉場效果，立刻切換 */
+}
+
+.background-layer {
+    z-index: -2;
+}
+
+.background-layer-secondary {
+    z-index: -1;
+}
+
 
 h2 {
     font-size: 1.5em;
