--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,11 +6,11 @@
     <title>登入成功</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="icon" href="https://fido2-web.akitawan.moe/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{url_for('static',filename='images/favicon.png') }}" type="image/x-icon">
     
 </head>
 
-<body onclick="toggleDash()" style="background-image: url('/static/images/dash1.png');">
+<body onclick="toggleDash()" style="background-image: url('{{ url_for('static', filename='images/dash1.png') }}');">
     <div class="background-layer" id="bg-layer-1"></div>
     <div class="background-layer-secondary" id="bg-layer-2"></div>
 
@@ -22,7 +22,10 @@
     </div>
 
     <script>  const user = {{ payload | tojson | safe }};  </script>
-    <script type="module" src="/static/js/dashboard.js"></script>
+    <script type="module" src="{{ url_for('static',filename='js/dashboard.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script>
+        window.base_path = "{{ request.script_root }}";
+    </script>
 </body>
