--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,10 @@
     <title>WebAutn Oauth2.0</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="icon" href="https://fido2-web.akitawan.moe/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{url_for('static',filename='images/favicon.png') }}" type="image/x-icon">
 </head>
 
-<body onclick="toggleLight()" style="background-image: url('/static/images/dark1.png');">
+<body onclick="toggleLight()" style="background-image: url('{{ url_for('static', filename='images/dark1.png') }}');">
     <div class="background-layer" id="bg-layer-1"></div>
     <div class="background-layer-secondary" id="bg-layer-2"></div>
 
@@ -17,7 +17,7 @@
         <div class="login-card">
             <h1>歡迎來到OAuth2.0 Demo</h1>
             <p>Ciallo～(∠・ω< )⌒☆</p>
-            <a class="login-btn" href="https://fido2-web.akitawan.moe/main" target="_blank" rel="noopener noreferrer">註冊帳號</a>
+            <a class="login-btn" href="https://proxy.akitawan.moe/wu/fido2/main" target="_blank" rel="noopener noreferrer">註冊帳號</a>
 
             <button class="login-btn" onclick="redirectToAuth()">使用 JWT 登入</button>
 
@@ -28,7 +28,9 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/static/js/login.js"></script>
+    
+    <script type="module" src="{{ url_for('static',filename='js/login.js') }}"></script>
+    
 </body>
 
 </html>
