修改登出部份 新增 418

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
         <h2 id="user-title">歡迎回來，使用者</h2>
         <p>登入資訊如下：</p>
         <div id="user-info" class="user-info"></div>
-        <button class="logout-btn" onclick="logout()">登出</button>
+        <button class="logout-btn" onclick="logout()">關閉網頁</button>
     </div>
 
     <script>  const user = {{ payload | tojson | safe }};  </script>
